--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,47 @@
 </properties>
 
  <dependencies>
-    <!-- TestNG support for Cucumber -->
+ <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version> <!-- or the latest version -->
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/messages -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>messages</artifactId>
+			<version>29.0.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-full</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+		<!-- TestNG support for Cucumber -->
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-testng</artifactId>
@@ -17,21 +57,21 @@
         <scope>test</scope>
     </dependency>
 
-    <!-- Core Cucumber functionality -->
+		<!-- Core Cucumber functionality -->
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-java</artifactId>
         <version>7.30.0</version>
     </dependency>
 
-<!-- https://mvnrepository.com/artifact/io.cucumber/messages -->
+		<!-- https://mvnrepository.com/artifact/io.cucumber/messages -->
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>messages</artifactId>
     <version>29.0.1</version>
 </dependency>
 
-    <!-- JUnit (optional if using only TestNG) -->
+		<!-- JUnit (optional if using only TestNG) -->
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -39,14 +79,14 @@
         <scope>test</scope>
     </dependency>
 
-    <!-- WebDriverManager -->
+		<!-- WebDriverManager -->
     <dependency>
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
         <version>6.1.0</version>
     </dependency>
 
-    <!-- Selenium -->
+		<!-- Selenium -->
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
